# CMake-Learn

./: .gitignore  README.md
calculator/: CMakeLists.txt  Makefile  head.h  main.cpp  multi.cpp
calculator/include/: head.h
calculator/source/: add.cpp  div.cpp  sub.cpp
nestedcmake/: CMakeLists.txt
nestedcmake/app/: CMakeLists.txt
nestedcmake/app/src/: main.cpp
nestedcmake/lib/: CMakeLists.txt
nestedcmake/lib/include/: mylib.h
nestedcmake/lib/src/: lib.cpp
video2image/: CMakeLists.txt  main.cpp
